# wevelet

dllpnp/: note.md
dllpnp/.history/: note_20240318212515.md
dllpnp/.history/py/: dk_20240601153320.py  function_20240401223857.py  function_20240401224220.py  function_20240401224349.py  function_20240401224404.py  function_20240401224408.py  function_20240401224615.py  function_20240401224622.py  function_20240401224630.py  function_20240401224634.py  function_20240401225248.py  function_20240401225447.py  function_20240401230152.py  function_20240401230157.py  function_20240401230201.py  function_20240401230217.py  function_20240401230324.py  function_20240401230330.py  function_20240402120908.py  function_20240402122726.py  function_20240402122733.py  function_20240402122801.py  function_20240402122813.py  function_20240402123121.py  function_20240402123227.py  function_20240402123713.py  function_20240402131411.py  function_20240402131934.py  library_functions_20240318212202.py  library_functions_20240319140147.py  library_functions_20240319142339.py  pnp_20240402121045.py  pnp_20240402121421.py  pnp_20240402121535.py  pnp_20240402121645.py  pnp_20240402121652.py  pnp_20240402121721.py  pnp_20240402121729.py  pnp_20240402121842.py  pnp_20240402121848.py  (+52 more)
dllpnp/.history/src/pnp-mpi/: main-mpi_20240405223507  main-mpi_20240405223702  main-mpi_20240608214113.cpp  main-mpi_20240608214309.cpp  main-mpi_20240610110349.cpp  main-mpi_20240610132445.cpp
dllpnp/py/: add.py  function.py  library_functions.py  structures.py  subtract.py
dllpnp/py/.history/: dk_20240622183828.py  dk_20240622183945.py  dk_20240622192909.py  test_20240617154629.py  test_20240617154706.py
dllpnp/src/: CMakeLists.txt
dllpnp/src/filter/: CMakeLists.txt  filter_prj.cpp
dllpnp/src/lwt/: alg.h  lwave_test.h
dllpnp/src/mrcmx/: CMakeLists.txt  mrcstack.h
dllpnp/src/pnp-mpi/: CMakeLists.txt
dllpnp/src/util/: CMakeLists.txt
pnp/: .browsercache.json  .eman2log.txt  .eman2settings.json  clean.sh  fsc.sh  fsc.txt
pnp/.kdev4/: singlexsart.kdev4
pnp/oldcode/admm-mpi/: CMakeLists.txt  main-mpi.cpp  note.md
pnp/oldcode/atv/pnp-mpi/: CMakeLists.txt  main-mpi.cpp
pnp/oldcode/lwt_1次/src/: CMakeLists.txt
pnp/oldcode/lwt_1次/src/admm-mpi/: CMakeLists.txt
pnp/oldcode/lwt_1次/src/lwt/: lift.h
pnp/oldcode/lwt_1次/src/mrcmx/: mrcstack.cpp  mrcstack.h
pnp/oldcode/lwt_1次/src/pnp-mpi/: main-mpi.cpp
pnp/oldcode/lwt_多次/src/admm-mpi/: main-mpi.cpp
pnp/oldcode/lwt_多次/src/filter/: filter_prj.cpp  filter_prj.h
pnp/oldcode/lwt_多次/src/lwt/: lwave_test.h  lwave_test_copy.h
pnp/oldcode/lwt_多次/src/pnp-mpi/: main-mpi.cpp
pnp/oldcode/test_deconv/pnp-mpi/: main-mpi.cpp
pnp/src/: CMakeLists.txt
pnp/src/.history/pnp-mpi/: main-mpi_20240125200704.cpp  main-mpi_20240331221012.cpp  main-mpi_20240405223108.cpp  main-mpi_20240405223116.cpp  main-mpi_20240405223127.cpp
pnp/src/filter/: filter_prj.h
pnp/src/lwt/: lwave.h
pnp/src/pnp-mpi/: CMakeLists.txt  main-mpi  opts.h
python/: addnoise.py  compare.py  fourier.py  mrc.py  plot.txt  plotfrc.py  ploy.py  rotate.py  rotation.py
python/.history/: addnoise_20240328161019.py  addnoise_20240401185503.py
python/FRC-main/: .eman2log.txt  proj_eman2.py
python/FRC-main/fsc/: .txt  ICON.txt  admm.txt  deconv8.txt  frc_results.txt  imod.txt  imod_pre.txt  pnp.txt  pnp_deconv8.txt  test.txt
